--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "chromatic": "npx chromatic --project-token=b19f5a8c9c61"
+    "chromatic": "npx chromatic --project-token=5a80cd93d450"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -56,5 +56,7 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.4",
     "whatwg-fetch": "^3.6.2"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "next-project@0.1.0"
 }
