--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-project",
+  "name": "next-storybook",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "chromatic": "npx chromatic --project-token=5a80cd93d450"
+    "chromatic": "npx chromatic --project-token=b19f5a8c9c61"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -25,17 +25,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
-    "@next/plugin-storybook": "^12.3.0",
-    "@storybook/addon-a11y": "^6.5.10",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/addon-a11y": "^6.4.22",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
     "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/react-hooks": "^7.0.2",
@@ -48,16 +47,15 @@
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-storybook": "^0.6.4",
+    "eslint-plugin-storybook": "^0.5.11",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^27.5.1",
     "markdown-it": "^13.0.1",
     "msw": "^0.39.2",
     "prettier": "2.6.2",
-    "storybook-addon-next-router": "^4.0.0",
+    "storybook-addon-next-router": "^3.1.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.4",
     "whatwg-fetch": "^3.6.2"
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "next-project@0.1.0"
+  }
 }
