--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.5",
     "next": "12.1.6",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.30.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
