--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.5",
+    "crypto": "^1.0.1",
     "next": "12.1.6",
     "qs": "^6.10.3",
     "react": "17.0.2",
