--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "markdown-it": "^13.0.1",
     "msw": "^0.39.2",
     "prettier": "2.6.2",
+    "storybook-addon-next": "^1.6.9",
     "storybook-addon-next-router": "^4.0.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.4",
