--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,3 @@
+sonar.projectKey=Ahmadfaisal98_coursebox
+sonar.organization=ahmadfaisal98
 sonar.exclusions=**/**.test.**, **/**.stories.tsx, **/mocks/**
