--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,6 @@
 
 # This is a basic workflow to help you get started with Actions
-name: check
+name: Test code, Check linter, and Check Quality Code
 
 # Controls when the workflow will run
 on:
